add content to practice HTML tags

--- a/practice_exercise.html
+++ b/practice_exercise.html
@@ -4,7 +4,55 @@
 
   <body>
     <div class="main">
-      
+      <!-- Section 1: Basic Info About Matz -->
+      <div class="section-1-basic">
+        <h1>Yukihiro Matsumoto</h1>
+        <h2>Creator of Ruby and Computer Scientist</h2>
+        <img src="https://tech.rakuten.co.jp/rtc2014/img/speakers/yukihiro_matsumoto.jpg" alt="Matz, creator of Ruby" width=20% height=20%>
+        <p>Read more: <a href="https://en.wikipedia.org/wiki/Yukihiro_Matsumoto" target="_blank">Wikipedia: Yukihiro Matsumoto</a></p>
+      </div>
+
+      <!-- Section 2: Biography -->
+      <div class="section-2-bio">
+        <h3>Biography</h3>
+        <p>Yukihiro Matsumoto is a Japanese computer scientist and software programmer best known as the chief designer of the Ruby programming language and its reference implementation, Matz's Ruby Interpreter. His demeanor has brought about a motto in the Ruby community: "Matz is nice and so we are nice," commonly abbreviated as MINASWAN.</p>
+      </div>
+
+      <!-- Section 3: Quotes -->
+      <div class="section-3-quotes">
+        <h3>Quotes</h3>
+        <ul>
+          <li>"Ruby inherited the Perl philosophy of having more than one way to do the same thing. I inherited that philosophy from Larry Wall, who is my hero actually. I want to make Ruby users free. I want to give them the freedom to choose."</li>
+          <li>"In our daily lives as programmers, we process text strings a lot. So I tried to work hard on text processing, namely the string class and regular expressions. Regular expressions are built into the language and are very tuned up for use."</li>
+          <li>"I believe consistency and orthogonality are tools of design, not the primary goal in design."</li>
+        </ul>
+      </div>
+
+      <!-- Section 4: Works-->
+      <div class="section-4-works">
+        <h3>Works</h3>
+        <h4>Ruby</h4>
+        <p>Matsumoto released the first version of the Ruby programming language on 21 December 1995.[4][5] He still leads the development of the language's reference implementation, MRI (for Matz's Ruby Interpreter).</p>
+
+        <h4>MRuby</h4>
+        <p>In April 2012, Matsumoto open-sourced his work on a new implementation of Ruby called mruby.[6][7] It is a minimal implementation based on his virtual machine, called ritevm, and is designed to allow software developers to embed Ruby in other programs while keeping memory footprint small and performance optimised.</p>
+
+        <h4>streem</h4>
+        <p>In December 2014, Matsumoto open-sourced his work on a new scripting language called streem, a concurrent language based on a programming model similar to shell, with influences from Ruby, Erlang and other functional programming languages.[8]</p>
+
+        <h4>Treasure Data</h4>
+        <p>In December 2014, Matsumoto open-sourced his work on a new scripting language called streem, a concurrent language based on a programming model similar to shell, with influences from Ruby, Erlang and other functional programming languages.[8]</p>
+      </div>
+
+      <!-- Section 5: Books -->
+      <div class="section-5-books">
+        <h3>Published Books</h3>
+        <ol>
+          <li>オブジェクト指向スクリプト言語 Ruby</li>
+          <li>Ruby in a Nutshell</li>
+          <li>The Ruby Programming Language</li>
+        </ol>
+      </div>
 
     </div>
   </body>
